# RSAgent

./: .gitmodules  CLAUDE.md  README.md  pyproject.toml
experiments/rsagent/: rl.toml
rsa_distill/: __init__.py  env.py
rsagent/: __init__.py  env.py
scripts/: inspect_rollout.py  inspect_rsa_steps.py
tests/: test_rsa_distill.py  test_rsagent.py
