[project]
name = "rsagent"
description = "RSAgent: End-to-end RL training for Recursive Self-Aggregation (RSA)"
tags = ["rl", "reasoning", "aggregation", "multi-step", "grpo", "train"]
version = "0.1.4"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "verifiers>=0.1.9.post3",
]

[project.optional-dependencies]
vllm = ["vllm", "transformers", "torch"]
anthropic = ["anthropic"]
openai = ["openai"]
gemini = ["google-genai"]
math-eval = ["datasets"]
all = ["vllm", "transformers", "torch", "anthropic", "openai", "google-genai", "datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "/rsa/*.py",
    "/rsa/adapters/*.py",
    "/rsagent/*.py",
    "/pyproject.toml",
    "/README.md",
    "/experiments/rsagent/*.toml",
    "/tests/test_rsa.py",
    "/tests/test_rsagent.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
